# LLMAgora

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO  aggregate_df.pkl  incentive_structure.md  pyproject.toml  requirements.txt  setup.py  survey_trend_visual_analysis_before_after.md
data/: agents_persona_example.json  config_example.json  config_example.jsonc  debate_construction.json  example.json  model_catalog.json  model_exploration.json  personas.json  prompts.json  questions.json  scenarios.json  scenarios_V2.json  scenarios_V3.json  scenarios_v2.json  survey.json  sweep_example.jsonc
notebooks/: aggregate_df_structure.md  analysis_All.ipynb  analysis_case_studies.ipynb  analysis_main_figures.ipynb  analysis_summary.ipynb  analysis_survey.ipynb  demo.ipynb  demo_persona.ipynb  demo_persona_adherence_eval.ipynb  demo_persona_eval.ipynb  demo_persona_survey.ipynb  eval_aggreagate.ipynb  eval_aggreagate_no_stance.ipynb  eval_pro.ipynb  experiment_persona_eval.ipynb  offline_analysis_demo.ipynb  run_demo.ipynb  survey_trend_visual_analysis.ipynb  text_output.ipynb
outputs/: persona_evaluation_results.json
scripts/: check_latex_for_matplotlib.sh
survey_plotting/: __init__.py  advanced_analysis.py  config.py  plots_cross_scenario.py  plots_distribution.py  plots_dynamics.py  plots_summary.py  preprocess.py  summarize.py  utils.py
sweep_5/: manifest.json  master_config.jsonc  status.json  summary.json
tests/: conftest.py  test_agent_agora_extra.py  test_agora_simple.py  test_cli.py  test_debate_analyzer.py  test_emotion_analyzer.py  test_eval_aggregate.py  (+12 more)
(+2046 files in other folders)
