[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-agora"
version = "0.1.0"
description = "Arena for LLM agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx",
  "ipykernel",
  "json5",
  "matplotlib",
  "pytest",
  "pytest-cov",
  "python-dotenv",
]

[project.optional-dependencies]
analysis = [
  "sentence-transformers",
]

[project.scripts]
agora = "agora.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agora = []

[tool.pytest.ini_options]
addopts = ["--cov=agora", "--cov-fail-under=100"]
